# wxauto-restful-api

./: .gitignore  FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  README_v2.md  STARTUP_LOGIC.md  config.yaml  pyproject.toml  test_startup.py
app/: main.py
app/api/v1/: activation.py  chat.py  files.py  info.py  listen.py  web.py  wechat.py
app/database/: factory.py  sqlite.py
app/middleware/: __init__.py  concurrency.py
app/models/: standard_data.py
app/models/request/: activation.py  listen.py  wechat.py
app/monitoring/: __init__.py  health.py  metrics.py
app/services/: activation_service.py  chat_service.py  executor.py  init.py  listen_service.py  operation_queue.py  service_manager.py  wechat_service.py
app/services/applications/: acceptnewfriend.py
app/utils/: config.py  error_handler.py  response_builder.py  wx_package_manager.py
docs/: API_RESPONSE_FORMAT.md  SERVICE_MANAGEMENT.md
logs/errors/: AttributeError_20260309_124101_965785.json  AttributeError_20260309_133910_092223.json  AttributeError_20260309_134036_062268.json  AttributeError_20260309_135941_394248.json
